Fix progress bar styling
- Don't start at denominator=1 otherwise it jumps back to the start
after the first fetch
- Fix buggy scrollbar when spinner spinning

--- a/index.css
+++ b/index.css
@@ -51,6 +51,7 @@ img:not([src]) {
 
 .spinner {
   animation: spin 1s linear infinite;
+  margin: auto;
 }
 
 .header
